Remove the List operation
