# pinecone/experimental/openapi/models/__init__.py
@@ -15,7 +15,6 @@ from pinecone.experimental.openapi.model.fetch_response import FetchResponse
 from pinecone.experimental.openapi.model.hnsw_config import HnswConfig
 from pinecone.experimental.openapi.model.index_meta import IndexMeta
 from pinecone.experimental.openapi.model.list_namespaces_response import ListNamespacesResponse
-from pinecone.experimental.openapi.model.list_response import ListResponse
 from pinecone.experimental.openapi.model.patch_request import PatchRequest
 from pinecone.experimental.openapi.model.protobuf_any import ProtobufAny
 from pinecone.experimental.openapi.model.protobuf_null_value import ProtobufNullValue
